# register-by-gen

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
data/Train_D/AB_D/2ABD001/: mask.mha
data/Train_D/AB_D/2ABD003/: mask.mha
logs/i2i_experiment/version_0/: hparams.yaml  metrics.csv
nbs/: dataset.ipynb  torchio_dataset.ipynb
script/: test_i2i_pipeline.py  test_lightning_datamodule.py  train_with_cli.py  unit_test_i2i_inference.py  unit_test_test_i2i_pipeline.py  unit_test_test_lightning_datamodule.py
script/configs/: default.yaml  fast_test.yaml
src/register_by_gen/: __init__.py
src/register_by_gen/dataset/: __init__.py  lightning_datamodule.py  syn2023_dset.py
src/register_by_gen/dl_model/: model_i2i.py
